sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| ------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [availableServiceTiersListByWorkspaceSample.js][availableservicetierslistbyworkspacesample] | Gets the available service tiers for the workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesAvailableServiceTiers.json                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                             | Create or update a Log Analytics cluster. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [clustersDeleteSample.js][clustersdeletesample]                                             | Deletes a cluster instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [clustersGetSample.js][clustersgetsample]                                                   | Gets a Log Analytics cluster instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [clustersListByResourceGroupSample.js][clusterslistbyresourcegroupsample]                   | Gets Log Analytics clusters in a resource group. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [clustersListSample.js][clusterslistsample]                                                 | Gets the Log Analytics clusters in a subscription. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [clustersUpdateSample.js][clustersupdatesample]                                             | Updates a Log Analytics cluster. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [dataExportsCreateOrUpdateSample.js][dataexportscreateorupdatesample]                       | Create or update a data export. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [dataExportsDeleteSample.js][dataexportsdeletesample]                                       | Deletes the specified data export in a given workspace.. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [dataExportsGetSample.js][dataexportsgetsample]                                             | Gets a data export instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataExportsListByWorkspaceSample.js][dataexportslistbyworkspacesample]                     | Lists the data export instances within a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [dataSourcesCreateOrUpdateSample.js][datasourcescreateorupdatesample]                       | Create or update a data source. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataSourcesDeleteSample.js][datasourcesdeletesample]                                       | Deletes a data source instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataSourcesGetSample.js][datasourcesgetsample]                                             | Gets a datasource instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataSourcesListByWorkspaceSample.js][datasourceslistbyworkspacesample]                     | Gets the first page of data source instances in a workspace with the link to the next page. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                 |
| [deletedWorkspacesListByResourceGroupSample.js][deletedworkspaceslistbyresourcegroupsample] | Gets recently deleted workspaces in a resource group, available for recovery. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                            |
| [deletedWorkspacesListSample.js][deletedworkspaceslistsample]                               | Gets recently deleted workspaces in a subscription, available for recovery. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [gatewaysDeleteSample.js][gatewaysdeletesample]                                             | Delete a Log Analytics gateway. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesGatewaysDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [intelligencePacksDisableSample.js][intelligencepacksdisablesample]                         | Disables an intelligence pack for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesDisableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [intelligencePacksEnableSample.js][intelligencepacksenablesample]                           | Enables an intelligence pack for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesEnableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [intelligencePacksListSample.js][intelligencepackslistsample]                               | Lists all the intelligence packs possible and whether they are enabled or disabled for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListIntelligencePacks.json                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesCreateOrUpdateSample.js][linkedservicescreateorupdatesample]                 | Create or update a linked service. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedServicesDeleteSample.js][linkedservicesdeletesample]                                 | Deletes a linked service instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedServicesGetSample.js][linkedservicesgetsample]                                       | Gets a linked service instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [linkedServicesListByWorkspaceSample.js][linkedserviceslistbyworkspacesample]               | Gets the linked services instances in a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedStorageAccountsCreateOrUpdateSample.js][linkedstorageaccountscreateorupdatesample]   | Create or Update a link relation between current workspace and a group of storage accounts of a specific data source type. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsCreate.json                                                                                                                                                                                                                                                                                                                                                                 |
| [linkedStorageAccountsDeleteSample.js][linkedstorageaccountsdeletesample]                   | Deletes all linked storage accounts of a specific data source type associated with the specified workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsDelete.json                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedStorageAccountsGetSample.js][linkedstorageaccountsgetsample]                         | Gets all linked storage account of a specific data source type associated with the specified workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsGet.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedStorageAccountsListByWorkspaceSample.js][linkedstorageaccountslistbyworkspacesample] | Gets all linked storage accounts associated with the specified workspace, storage accounts will be sorted by their data source type. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                              |
| [managementGroupsListSample.js][managementgroupslistsample]                                 | Gets a list of management groups connected to a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListManagementGroups.json                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [operationStatusesGetSample.js][operationstatusesgetsample]                                 | Get the status of a long running azure asynchronous operation. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/OperationStatusesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [operationsListSample.js][operationslistsample]                                             | Lists all of the available OperationalInsights Rest API operations. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-10-01/examples/OperationsListByTenant.json                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [savedSearchesCreateOrUpdateSample.js][savedsearchescreateorupdatesample]                   | Creates or updates a saved search for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesSavedSearchesCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [savedSearchesDeleteSample.js][savedsearchesdeletesample]                                   | Deletes the specified saved search in a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesDeleteSavedSearches.json                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [savedSearchesGetSample.js][savedsearchesgetsample]                                         | Gets the specified saved search for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesSavedSearchesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [savedSearchesListByWorkspaceSample.js][savedsearcheslistbyworkspacesample]                 | Gets the saved searches for a given Log Analytics Workspace x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/SavedSearchesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [schemaGetSample.js][schemagetsample]                                                       | Gets the schema for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/SavedSearchesGetSchema.json                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [sharedKeysGetSharedKeysSample.js][sharedkeysgetsharedkeyssample]                           | Gets the shared keys for a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesGetSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [sharedKeysRegenerateSample.js][sharedkeysregeneratesample]                                 | Regenerates the shared keys for a Log Analytics Workspace. These keys are used to connect Microsoft Operational Insights agents to the workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesRegenerateSharedKeys.json                                                                                                                                                                                                                                                                                                                                       |
| [storageInsightConfigsCreateOrUpdateSample.js][storageinsightconfigscreateorupdatesample]   | Create or update a storage insight. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [storageInsightConfigsDeleteSample.js][storageinsightconfigsdeletesample]                   | Deletes a storageInsightsConfigs resource x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [storageInsightConfigsGetSample.js][storageinsightconfigsgetsample]                         | Gets a storage insight instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [storageInsightConfigsListByWorkspaceSample.js][storageinsightconfigslistbyworkspacesample] | Lists the storage insight instances within a workspace x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesCreateSample.js][tablescreatesample]                                                 | Updates a Log Analytics workspace table properties. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [tablesGetSample.js][tablesgetsample]                                                       | Gets a Log Analytics workspace table. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tablesListByWorkspaceSample.js][tableslistbyworkspacesample]                               | Gets all the tables for the specified Log Analytics workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [tablesUpdateSample.js][tablesupdatesample]                                                 | Updates a Log Analytics workspace table properties. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [usagesListSample.js][usageslistsample]                                                     | Gets a list of usage metrics for a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacePurgeGetPurgeStatusSample.js][workspacepurgegetpurgestatussample]                 | Gets status of an ongoing purge operation. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesPurgeOperation.json                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [workspacePurgeSample.js][workspacepurgesample]                                             | Purges data in an Log Analytics workspace by a set of user-defined filters. //@@TS-MAGIC-NEWLINE@@ In order to manage system resources, purge requests are throttled at 50 requests per hour. You should batch the execution of purge requests by sending a single command whose predicate includes all user identities that require purging. Use the in operator to specify multiple identities. You should run the query prior to using for a purge request to verify that the results are expected. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesPurge.json |
| [workspacesCreateOrUpdateSample.js][workspacescreateorupdatesample]                         | Create or update a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [workspacesDeleteSample.js][workspacesdeletesample]                                         | Deletes a workspace resource. To recover the workspace, create it again with the same name, in the same subscription, resource group and location. The name is kept for 14 days and cannot be used for another workspace. To remove the workspace completely and release the name, use the force flag. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesDelete.json                                                                                                                                                                                                |
| [workspacesGetSample.js][workspacesgetsample]                                               | Gets a workspace instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [workspacesListByResourceGroupSample.js][workspaceslistbyresourcegroupsample]               | Gets workspaces in a resource group. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacesListSample.js][workspaceslistsample]                                             | Gets the workspaces in a subscription. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [workspacesUpdateSample.js][workspacesupdatesample]                                         | Updates a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://nodejs.org/about/releases/).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node availableServiceTiersListByWorkspaceSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node availableServiceTiersListByWorkspaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableservicetierslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/availableServiceTiersListByWorkspaceSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersDeleteSample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersGetSample.js
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersListByResourceGroupSample.js
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersListSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/clustersUpdateSample.js
[dataexportscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataExportsCreateOrUpdateSample.js
[dataexportsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataExportsDeleteSample.js
[dataexportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataExportsGetSample.js
[dataexportslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataExportsListByWorkspaceSample.js
[datasourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataSourcesCreateOrUpdateSample.js
[datasourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataSourcesDeleteSample.js
[datasourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataSourcesGetSample.js
[datasourceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/dataSourcesListByWorkspaceSample.js
[deletedworkspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/deletedWorkspacesListByResourceGroupSample.js
[deletedworkspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/deletedWorkspacesListSample.js
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/gatewaysDeleteSample.js
[intelligencepacksdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/intelligencePacksDisableSample.js
[intelligencepacksenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/intelligencePacksEnableSample.js
[intelligencepackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/intelligencePacksListSample.js
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedServicesCreateOrUpdateSample.js
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedServicesDeleteSample.js
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedServicesGetSample.js
[linkedserviceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedServicesListByWorkspaceSample.js
[linkedstorageaccountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedStorageAccountsCreateOrUpdateSample.js
[linkedstorageaccountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedStorageAccountsDeleteSample.js
[linkedstorageaccountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedStorageAccountsGetSample.js
[linkedstorageaccountslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/linkedStorageAccountsListByWorkspaceSample.js
[managementgroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/managementGroupsListSample.js
[operationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/operationStatusesGetSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/operationsListSample.js
[savedsearchescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/savedSearchesCreateOrUpdateSample.js
[savedsearchesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/savedSearchesDeleteSample.js
[savedsearchesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/savedSearchesGetSample.js
[savedsearcheslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/savedSearchesListByWorkspaceSample.js
[schemagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/schemaGetSample.js
[sharedkeysgetsharedkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/sharedKeysGetSharedKeysSample.js
[sharedkeysregeneratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/sharedKeysRegenerateSample.js
[storageinsightconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/storageInsightConfigsCreateOrUpdateSample.js
[storageinsightconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/storageInsightConfigsDeleteSample.js
[storageinsightconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/storageInsightConfigsGetSample.js
[storageinsightconfigslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/storageInsightConfigsListByWorkspaceSample.js
[tablescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/tablesCreateSample.js
[tablesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/tablesGetSample.js
[tableslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/tablesListByWorkspaceSample.js
[tablesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/tablesUpdateSample.js
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/usagesListSample.js
[workspacepurgegetpurgestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacePurgeGetPurgeStatusSample.js
[workspacepurgesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacePurgeSample.js
[workspacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesCreateOrUpdateSample.js
[workspacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesDeleteSample.js
[workspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesGetSample.js
[workspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesListByResourceGroupSample.js
[workspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesListSample.js
[workspacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/javascript/workspacesUpdateSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-operationalinsights?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/operationalinsights/arm-operationalinsights/README.md
