sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/README.md
# @azure/arm-operationalinsights client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-operationalinsights in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [availableServiceTiersListByWorkspaceSample.js][availableservicetierslistbyworkspacesample] | gets the available service tiers for the workspace. x-ms-original-file: 2026-03-01/WorkspacesAvailableServiceTiers.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                             | create or update a Log Analytics cluster. x-ms-original-file: 2026-03-01/ClustersCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [clustersDeleteSample.js][clustersdeletesample]                                             | deletes a cluster instance. x-ms-original-file: 2026-03-01/ClustersDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [clustersGetSample.js][clustersgetsample]                                                   | gets a Log Analytics cluster instance. x-ms-original-file: 2026-03-01/ClustersGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [clustersListByResourceGroupSample.js][clusterslistbyresourcegroupsample]                   | gets Log Analytics clusters in a resource group. x-ms-original-file: 2026-03-01/ClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [clustersListSample.js][clusterslistsample]                                                 | gets the Log Analytics clusters in a subscription. x-ms-original-file: 2026-03-01/ClustersSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [clustersUpdateSample.js][clustersupdatesample]                                             | updates a Log Analytics cluster. x-ms-original-file: 2026-03-01/ClustersUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataExportsCreateOrUpdateSample.js][dataexportscreateorupdatesample]                       | create or update a data export. x-ms-original-file: 2026-03-01/DataExportCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataExportsDeleteSample.js][dataexportsdeletesample]                                       | deletes the specified data export in a given workspace.. x-ms-original-file: 2026-03-01/DataExportDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [dataExportsGetSample.js][dataexportsgetsample]                                             | gets a data export instance. x-ms-original-file: 2026-03-01/DataExportGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [dataExportsListByWorkspaceSample.js][dataexportslistbyworkspacesample]                     | lists the data export instances within a workspace. x-ms-original-file: 2026-03-01/DataExportListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [dataSourcesCreateOrUpdateSample.js][datasourcescreateorupdatesample]                       | create or update a data source. x-ms-original-file: 2026-03-01/DataSourcesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [dataSourcesDeleteSample.js][datasourcesdeletesample]                                       | deletes a data source instance. x-ms-original-file: 2026-03-01/DataSourcesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [dataSourcesGetSample.js][datasourcesgetsample]                                             | gets a datasource instance. x-ms-original-file: 2026-03-01/DataSourcesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [dataSourcesListByWorkspaceSample.js][datasourceslistbyworkspacesample]                     | gets the first page of data source instances in a workspace with the link to the next page. x-ms-original-file: 2026-03-01/DataSourcesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [deletedWorkspacesListByResourceGroupSample.js][deletedworkspaceslistbyresourcegroupsample] | gets recently deleted workspaces in a resource group, available for recovery. x-ms-original-file: 2026-03-01/WorkspacesListByResourceGroupForDeleted.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [deletedWorkspacesListSample.js][deletedworkspaceslistsample]                               | gets recently deleted workspaces in a subscription, available for recovery. x-ms-original-file: 2026-03-01/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [gatewaysDeleteSample.js][gatewaysdeletesample]                                             | delete a Log Analytics gateway. x-ms-original-file: 2026-03-01/WorkspacesGatewaysDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [intelligencePacksDisableSample.js][intelligencepacksdisablesample]                         | disables an intelligence pack for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesDisableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [intelligencePacksEnableSample.js][intelligencepacksenablesample]                           | enables an intelligence pack for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesEnableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [intelligencePacksListSample.js][intelligencepackslistsample]                               | lists all the intelligence packs possible and whether they are enabled or disabled for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesListIntelligencePacks.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesCreateOrUpdateSample.js][linkedservicescreateorupdatesample]                 | create or update a linked service. x-ms-original-file: 2026-03-01/LinkedServicesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesDeleteSample.js][linkedservicesdeletesample]                                 | deletes a linked service instance. x-ms-original-file: 2026-03-01/LinkedServicesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesGetSample.js][linkedservicesgetsample]                                       | gets a linked service instance. x-ms-original-file: 2026-03-01/LinkedServicesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [linkedServicesListByWorkspaceSample.js][linkedserviceslistbyworkspacesample]               | gets the linked services instances in a workspace. x-ms-original-file: 2026-03-01/LinkedServicesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [linkedStorageAccountsCreateOrUpdateSample.js][linkedstorageaccountscreateorupdatesample]   | create or Update a link relation between current workspace and a group of storage accounts of a specific data source type. x-ms-original-file: 2026-03-01/LinkedStorageAccountsCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [linkedStorageAccountsDeleteSample.js][linkedstorageaccountsdeletesample]                   | deletes all linked storage accounts of a specific data source type associated with the specified workspace. x-ms-original-file: 2026-03-01/LinkedStorageAccountsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedStorageAccountsGetSample.js][linkedstorageaccountsgetsample]                         | gets all linked storage account of a specific data source type associated with the specified workspace. x-ms-original-file: 2026-03-01/LinkedStorageAccountsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [linkedStorageAccountsListByWorkspaceSample.js][linkedstorageaccountslistbyworkspacesample] | gets all linked storage accounts associated with the specified workspace, storage accounts will be sorted by their data source type. x-ms-original-file: 2026-03-01/LinkedStorageAccountsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [managementGroupsListSample.js][managementgroupslistsample]                                 | gets a list of management groups connected to a workspace. x-ms-original-file: 2026-03-01/WorkspacesListManagementGroups.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [operationStatusesGetSample.js][operationstatusesgetsample]                                 | get the status of a long running azure asynchronous operation. x-ms-original-file: 2026-03-01/OperationStatusesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.js][operationslistsample]                                             | lists all of the available OperationalInsights Rest API operations. x-ms-original-file: 2026-03-01/OperationsListByTenant.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queriesDeleteSample.js][queriesdeletesample]                                               | deletes a specific Query defined within an Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queriesGetSample.js][queriesgetsample]                                                     | gets a specific Log Analytics Query defined within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [queriesListSample.js][querieslistsample]                                                   | gets a list of Queries defined within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [queriesListSearchSample.js][querieslistsearchsample]                                       | search a list of Queries defined within a Log Analytics QueryPack according to given search properties. x-ms-original-file: 2026-03-01/QueryPackQueriesSearch.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [queriesPutSample.js][queriesputsample]                                                     | adds or Updates a specific Query within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesPut.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [queriesUpdateSample.js][queriesupdatesample]                                               | adds or Updates a specific Query within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [queryPacksCreateOrUpdateSample.js][querypackscreateorupdatesample]                         | creates (or updates) a Log Analytics QueryPack. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-03-01/QueryPacksCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [queryPacksCreateOrUpdateWithoutNameSample.js][querypackscreateorupdatewithoutnamesample]   | creates a Log Analytics QueryPack. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-03-01/QueryPackUpdateNoName.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queryPacksDeleteSample.js][querypacksdeletesample]                                         | deletes a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPacksDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [queryPacksGetSample.js][querypacksgetsample]                                               | returns a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPacksGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [queryPacksListByResourceGroupSample.js][querypackslistbyresourcegroupsample]               | gets a list of Log Analytics QueryPacks within a resource group. x-ms-original-file: 2026-03-01/QueryPacksListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [queryPacksListSample.js][querypackslistsample]                                             | gets a list of all Log Analytics QueryPacks within a subscription. x-ms-original-file: 2026-03-01/QueryPacksList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [queryPacksUpdateTagsSample.js][querypacksupdatetagssample]                                 | updates an existing QueryPack's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2026-03-01/QueryPacksUpdateTagsOnly.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [savedSearchesCreateOrUpdateSample.js][savedsearchescreateorupdatesample]                   | creates or updates a saved search for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesSavedSearchesCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [savedSearchesDeleteSample.js][savedsearchesdeletesample]                                   | deletes the specified saved search in a given workspace. x-ms-original-file: 2026-03-01/WorkspacesDeleteSavedSearches.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [savedSearchesGetSample.js][savedsearchesgetsample]                                         | gets the specified saved search for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesSavedSearchesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [savedSearchesListByWorkspaceSample.js][savedsearcheslistbyworkspacesample]                 | gets the saved searches for a given Log Analytics Workspace x-ms-original-file: 2026-03-01/SavedSearchesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [schemaGetSample.js][schemagetsample]                                                       | gets the schema for a given workspace. x-ms-original-file: 2026-03-01/SavedSearchesGetSchema.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [sharedKeysGetSharedKeysSample.js][sharedkeysgetsharedkeyssample]                           | gets the shared keys for a workspace. x-ms-original-file: 2026-03-01/WorkspacesGetSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [sharedKeysRegenerateSample.js][sharedkeysregeneratesample]                                 | regenerates the shared keys for a Log Analytics Workspace. These keys are used to connect Microsoft Operational Insights agents to the workspace. x-ms-original-file: 2026-03-01/WorkspacesRegenerateSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [storageInsightConfigsCreateOrUpdateSample.js][storageinsightconfigscreateorupdatesample]   | create or update a storage insight. x-ms-original-file: 2026-03-01/StorageInsightsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [storageInsightConfigsDeleteSample.js][storageinsightconfigsdeletesample]                   | deletes a storageInsightsConfigs resource x-ms-original-file: 2026-03-01/StorageInsightsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [storageInsightConfigsGetSample.js][storageinsightconfigsgetsample]                         | gets a storage insight instance. x-ms-original-file: 2026-03-01/StorageInsightsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [storageInsightConfigsListByWorkspaceSample.js][storageinsightconfigslistbyworkspacesample] | lists the storage insight instances within a workspace x-ms-original-file: 2026-03-01/StorageInsightsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [summaryLogsCreateOrUpdateSample.js][summarylogscreateorupdatesample]                       | creates or updates Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsUpsert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [summaryLogsDeleteSample.js][summarylogsdeletesample]                                       | deletes Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [summaryLogsGetSample.js][summarylogsgetsample]                                             | gets Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [summaryLogsListByWorkspaceSample.js][summarylogslistbyworkspacesample]                     | gets all summary rules for the specified Log Analytics workspace. x-ms-original-file: 2026-03-01/SummaryLogsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [summaryLogsRetryBinSample.js][summarylogsretrybinsample]                                   | retries a failed Summary rule bin. x-ms-original-file: 2026-03-01/SummaryLogsRetryBin.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [summaryLogsStartSample.js][summarylogsstartsample]                                         | starts an inactive Summary rule. x-ms-original-file: 2026-03-01/SummaryLogsStart.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [summaryLogsStopSample.js][summarylogsstopsample]                                           | stops an active Summary rule. x-ms-original-file: 2026-03-01/SummaryLogsStop.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tablesCancelSearchSample.js][tablescancelsearchsample]                                     | cancel a log analytics workspace search results table query run. x-ms-original-file: 2026-03-01/TablesSearchCancel.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesCreateOrUpdateSample.js][tablescreateorupdatesample]                                 | update or Create a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesUpsertForTable.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [tablesDeleteSample.js][tablesdeletesample]                                                 | delete a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [tablesGetSample.js][tablesgetsample]                                                       | gets a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [tablesListByWorkspaceSample.js][tableslistbyworkspacesample]                               | gets all the tables for the specified Log Analytics workspace. x-ms-original-file: 2026-03-01/TablesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [tablesMigrateSample.js][tablesmigratesample]                                               | migrate a Log Analytics table from support of the Data Collector API and Custom Fields features to support of Data Collection Rule-based Custom Logs. x-ms-original-file: 2026-03-01/TablesMigrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesUpdateSample.js][tablesupdatesample]                                                 | update a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesUpsert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [usagesListSample.js][usageslistsample]                                                     | gets a list of usage metrics for a workspace. x-ms-original-file: 2026-03-01/WorkspacesListUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [workspacePurgeGetPurgeStatusSample.js][workspacepurgegetpurgestatussample]                 | gets status of an ongoing purge operation. x-ms-original-file: 2026-03-01/WorkspacesPurgeLakeDataOperation.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [workspacePurgePurgeLakeDataSample.js][workspacepurgepurgelakedatasample]                   | purges data lake data in a Log Analytics workspace for a table over a specified time range. This operation deletes data lake data (Auxiliary tables, or Analytics tables mirrored to the data lake) for the specified table within the given time range. The operation is long-running; poll the URL returned in the Azure-AsyncOperation response header to track its status. x-ms-original-file: 2026-03-01/WorkspacesPurgeLakeData.json                                                                                                                                                                                                                                                                                                                                                                               |
| [workspacePurgePurgeSample.js][workspacepurgepurgesample]                                   | purges data in an Log Analytics workspace by a set of user-defined filters. In order to manage system resources, purge requests are throttled at 50 requests per hour. You should batch the execution of purge requests by sending a single command whose predicate includes all user identities that require purging. Use the in operator to specify multiple identities. You should run the query prior to using for a purge request to verify that the results are expected. Log Analytics only supports purge operations required for compliance with GDPR. The Log Analytics product team reserves the right to reject requests for purge operations that are not for the purpose of GDPR compliance. In the event of a dispute, please create a support ticket x-ms-original-file: 2026-03-01/WorkspacesPurge.json |
| [workspacesCreateOrUpdateSample.js][workspacescreateorupdatesample]                         | create or update a workspace. x-ms-original-file: 2026-03-01/WorkspacesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [workspacesDeleteSample.js][workspacesdeletesample]                                         | deletes a workspace resource. To recover the workspace, create it again with the same name, in the same subscription, resource group and location. The name is kept for 14 days and cannot be used for another workspace. To remove the workspace completely and release the name, use the force flag. x-ms-original-file: 2026-03-01/WorkspacesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [workspacesFailbackSample.js][workspacesfailbacksample]                                     | deactivates failover for the specified workspace. The failback operation is asynchronous and can take up to 30 minutes to complete. The status of the operation can be checked using the operationId returned in the response. x-ms-original-file: 2026-03-01/WorkspacesFailback.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [workspacesFailoverSample.js][workspacesfailoversample]                                     | activates failover for the specified workspace. The specified replication location must match the location of the enabled replication for this workspace. The failover operation is asynchronous and can take up to 30 minutes to complete. The status of the operation can be checked using the operationId returned in the response. x-ms-original-file: 2026-03-01/WorkspacesFailover.json                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [workspacesGetNSPSample.js][workspacesgetnspsample]                                         | gets a network security perimeter configuration. x-ms-original-file: 2026-03-01/NSPForWorkspaces_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [workspacesGetSample.js][workspacesgetsample]                                               | gets a workspace instance. x-ms-original-file: 2026-03-01/WorkspacesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [workspacesListByResourceGroupSample.js][workspaceslistbyresourcegroupsample]               | gets workspaces in a resource group. x-ms-original-file: 2026-03-01/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [workspacesListNSPSample.js][workspaceslistnspsample]                                       | gets a list of NSP configurations for specified workspace. x-ms-original-file: 2026-03-01/NSPForWorkspaces_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacesListSample.js][workspaceslistsample]                                             | gets the workspaces in a subscription. x-ms-original-file: 2026-03-01/WorkspacesSubscriptionListForWorkSpace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [workspacesReconcileNSPSample.js][workspacesreconcilenspsample]                             | reconcile network security perimeter configuration for Workspace resource. x-ms-original-file: 2026-03-01/NSPForWorkspaces_Reconcile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [workspacesUpdateSample.js][workspacesupdatesample]                                         | updates a workspace. x-ms-original-file: 2026-03-01/WorkspacesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node availableServiceTiersListByWorkspaceSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node availableServiceTiersListByWorkspaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableservicetierslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/availableServiceTiersListByWorkspaceSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersDeleteSample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersGetSample.js
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersListByResourceGroupSample.js
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersListSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/clustersUpdateSample.js
[dataexportscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataExportsCreateOrUpdateSample.js
[dataexportsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataExportsDeleteSample.js
[dataexportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataExportsGetSample.js
[dataexportslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataExportsListByWorkspaceSample.js
[datasourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataSourcesCreateOrUpdateSample.js
[datasourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataSourcesDeleteSample.js
[datasourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataSourcesGetSample.js
[datasourceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/dataSourcesListByWorkspaceSample.js
[deletedworkspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/deletedWorkspacesListByResourceGroupSample.js
[deletedworkspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/deletedWorkspacesListSample.js
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/gatewaysDeleteSample.js
[intelligencepacksdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/intelligencePacksDisableSample.js
[intelligencepacksenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/intelligencePacksEnableSample.js
[intelligencepackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/intelligencePacksListSample.js
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedServicesCreateOrUpdateSample.js
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedServicesDeleteSample.js
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedServicesGetSample.js
[linkedserviceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedServicesListByWorkspaceSample.js
[linkedstorageaccountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedStorageAccountsCreateOrUpdateSample.js
[linkedstorageaccountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedStorageAccountsDeleteSample.js
[linkedstorageaccountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedStorageAccountsGetSample.js
[linkedstorageaccountslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/linkedStorageAccountsListByWorkspaceSample.js
[managementgroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/managementGroupsListSample.js
[operationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/operationStatusesGetSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/operationsListSample.js
[queriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesDeleteSample.js
[queriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesGetSample.js
[querieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesListSample.js
[querieslistsearchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesListSearchSample.js
[queriesputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesPutSample.js
[queriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queriesUpdateSample.js
[querypackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksCreateOrUpdateSample.js
[querypackscreateorupdatewithoutnamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksCreateOrUpdateWithoutNameSample.js
[querypacksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksDeleteSample.js
[querypacksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksGetSample.js
[querypackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksListByResourceGroupSample.js
[querypackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksListSample.js
[querypacksupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/queryPacksUpdateTagsSample.js
[savedsearchescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/savedSearchesCreateOrUpdateSample.js
[savedsearchesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/savedSearchesDeleteSample.js
[savedsearchesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/savedSearchesGetSample.js
[savedsearcheslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/savedSearchesListByWorkspaceSample.js
[schemagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/schemaGetSample.js
[sharedkeysgetsharedkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/sharedKeysGetSharedKeysSample.js
[sharedkeysregeneratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/sharedKeysRegenerateSample.js
[storageinsightconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/storageInsightConfigsCreateOrUpdateSample.js
[storageinsightconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/storageInsightConfigsDeleteSample.js
[storageinsightconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/storageInsightConfigsGetSample.js
[storageinsightconfigslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/storageInsightConfigsListByWorkspaceSample.js
[summarylogscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsCreateOrUpdateSample.js
[summarylogsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsDeleteSample.js
[summarylogsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsGetSample.js
[summarylogslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsListByWorkspaceSample.js
[summarylogsretrybinsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsRetryBinSample.js
[summarylogsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsStartSample.js
[summarylogsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/summaryLogsStopSample.js
[tablescancelsearchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesCancelSearchSample.js
[tablescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesCreateOrUpdateSample.js
[tablesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesDeleteSample.js
[tablesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesGetSample.js
[tableslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesListByWorkspaceSample.js
[tablesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesMigrateSample.js
[tablesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/tablesUpdateSample.js
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/usagesListSample.js
[workspacepurgegetpurgestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacePurgeGetPurgeStatusSample.js
[workspacepurgepurgelakedatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacePurgePurgeLakeDataSample.js
[workspacepurgepurgesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacePurgePurgeSample.js
[workspacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesCreateOrUpdateSample.js
[workspacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesDeleteSample.js
[workspacesfailbacksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesFailbackSample.js
[workspacesfailoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesFailoverSample.js
[workspacesgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesGetNSPSample.js
[workspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesGetSample.js
[workspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesListByResourceGroupSample.js
[workspaceslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesListNSPSample.js
[workspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesListSample.js
[workspacesreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesReconcileNSPSample.js
[workspacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/javascript/workspacesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-operationalinsights
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/operationalinsights/arm-operationalinsights/README.md
